@@ -9,6 +9,8 @@
   (patch by Matthew Fischer).
 * Print an error message when an attempt is made to S/MIME sign a
   message but no "from" address can be determined (Georgi Stanojevski).
+* Made the getopt() substitute work with the getopt$UNIX2003() function
+  redirection mechanism on Mac OS X Leopard.
 
 [12.3] released 7/15/07
 * Multibyte characters are now handled correctly when printing texts
